refactored to use controller for Home.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12,7 +12,7 @@ nav {
 }
 
 .header-image {
-    background-image: url({{ asset('/images/header1140x152.png') }});
+    background-image: url("{{ asset('/images/header1140x152.png') }}");
 }
 
 .copyright {
